# structured-haskell-mode

./: .gitignore  .travis.yml  LICENSE  README.md  stack.yaml  structured-haskell-mode.cabal
elisp/: Makefile  evaporate.el  shm-ast-documentation.el  shm-ast.el  shm-case-split.el  shm-constraint.el  shm-customizations.el  shm-debug.el  shm-deletion.el  shm-edit-string.el  shm-evaporate.el  shm-fold.el  shm-generic.el  shm-globals.el  shm-in.el  shm-indent.el  shm-indentation.el  shm-insert-del.el  shm-insertion.el  shm-languages.el  shm-layout.el  shm-macros.el  shm-manipulation.el  shm-nav.el  shm-navigation.el  shm-node.el  shm-nodes.el  shm-overlays.el  shm-reformat.el  shm-simple-indent.el  shm-skeletons.el  shm-slot.el  shm-stack.el  shm-strings.el  shm-test.el  shm-tests.el  shm-transform.el  shm-type.el  shm-types.el  shm-yank-kill.el  (+1 more)
src/: Descriptive.hs  Main.hs
src/Descriptive/: Options.hs
