name:                structured-haskell-mode
version:             1.0.2
synopsis:            Structured editing Emacs mode for Haskell
description:         Structured editing Emacs mode for Haskell.
homepage:            https://github.com/chrisdone/structured-haskell-mode
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           Chris Done 2013
category:            Development
build-type:          Simple
cabal-version:       >=1.8
data-files:          elisp/shm-ast-documentation.el
                     elisp/shm-ast.el
                     elisp/shm-customizations.el
                     elisp/shm-deletion.el
                     elisp/shm.el
                     elisp/shm-evaporate.el
                     elisp/shm-generic.el
                     elisp/shm-globals.el
                     elisp/shm-indentation.el
                     elisp/shm-insertion.el
                     elisp/shm-macros.el
                     elisp/shm-navigation.el
                     elisp/shm-nodes.el
                     elisp/shm-overlays.el
                     elisp/shm-skeletons.el
                     elisp/shm-strings.el
                     elisp/shm-test.el
                     elisp/shm-tests.el
                     elisp/shm-transform.el
                     elisp/shm-types.el
                     elisp/shm-yank-kill.el

executable structured-haskell-mode
  main-is:           Main.hs
  ghc-options:       -O2
  hs-source-dirs:    src
  build-depends:     base >= 4 && < 5,
                     haskell-src-exts >= 1.14.0
