name:                structured-haskell-mode
version:             1.1.0
synopsis:            Structured editing Emacs mode for Haskell
description:         Structured editing Emacs mode for Haskell.
homepage:            https://github.com/chrisdone/structured-haskell-mode
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           Chris Done 2013
category:            Development
build-type:          Simple
cabal-version:       >=1.8
data-files:          elisp/shm-ast-documentation.el
                     elisp/shm-ast.el
                     elisp/shm-case-split.el
                     elisp/shm-constraint.el
                     elisp/shm-customizations.el
                     elisp/shm-debug.el
                     elisp/shm-edit-string.el
                     elisp/shm.el
                     elisp/shm-evaporate.el
                     elisp/shm-fold.el
                     elisp/shm-indent.el
                     elisp/shm-in.el
                     elisp/shm-insert-del.el
                     elisp/shm-languages.el
                     elisp/shm-layout.el
                     elisp/shm-macros.el
                     elisp/shm-manipulation.el
                     elisp/shm-nav.el
                     elisp/shm-node.el
                     elisp/shm-overlays.el
                     elisp/shm-simple-indent.el
                     elisp/shm-slot.el
                     elisp/shm-stack.el
                     elisp/shm-test.el
                     elisp/shm-tests.el
                     elisp/shm-type.el
                     elisp/shm-yank-kill.el

executable structured-haskell-mode
  main-is:           Main.hs
  ghc-options:       -O2 -Wall
  hs-source-dirs:    src
  build-depends:     base >= 4 && < 5
                   , haskell-src-exts >= 1.18
                   , text
                   , descriptive >= 0.7 && < 0.10
                   , ghc-prim
